--- a/docs/pages/getting-started/installation.mdx
+++ b/docs/pages/getting-started/installation.mdx
@@ -75,6 +75,6 @@ function App() {
 
 ## Next Steps
 
-- Explore the [Components](/components/address) documentation
-- Check out the [Hooks](/hooks/use-address) for additional functionality
-- View [Examples](/examples) for common usage patterns
+- Explore the component documentation (coming soon)
+- Check out the hooks for additional functionality (coming soon)
+- View [Examples](https://github.com/scaffold-eth/scaffold-ui/tree/main/example) for common usage patterns
