--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -47,4 +47,4 @@ function App() {
 
 ## Getting Started
 
-Check out the [Installation Guide](/getting-started/installation) to get started, or jump directly to the [Components](/components/address) documentation.
+Check out the [Installation Guide](/getting-started/installation) to get started with Scaffold UI.
