--- a/docs/pages/components/address.mdx
+++ b/docs/pages/components/address.mdx
@@ -128,6 +128,16 @@ import { Address } from "@scaffold-ui/components";
 
 ### Custom Chain
 
+import { polygon } from "viem/chains";
+
+<DocsProvider>
+  <Address
+    address="0x1234567890123456789012345678901234567890"
+    chain={polygon}
+    size="base"
+  />
+</DocsProvider>
+
 ```tsx twoslash
 import React from "react";
 import { polygon } from "viem/chains";
