fix: prettier singleAttributePerLine

--- a/docs/pages/components/address.mdx
+++ b/docs/pages/components/address.mdx
@@ -35,7 +35,6 @@ import { Address } from "@scaffold-ui/components";
   <Address address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045" />
 </DocsProvider>
 
-{/* prettier-ignore-start */}
 ```tsx twoslash
 import React from "react";
 import { Address } from "@scaffold-ui/components";
@@ -45,19 +44,32 @@ import { Address } from "@scaffold-ui/components";
   size="base"
 />;
 ```
-{/* prettier-ignore-end */}
 
 ### Different Sizes
 
 <DocsProvider>
-  <Address address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045" size="xs" />
-  <Address address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045" size="sm" />
-  <Address address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045" size="base" />
-  <Address address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045" size="lg" />
-  <Address address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045" size="xl" />
+  <Address
+    address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
+    size="xs"
+  />
+  <Address
+    address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
+    size="sm"
+  />
+  <Address
+    address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
+    size="base"
+  />
+  <Address
+    address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
+    size="lg"
+  />
+  <Address
+    address="0xd8da6bf26964af9d7eed9e03e53415d37aa96045"
+    size="xl"
+  />
 </DocsProvider>
 
-{/* prettier-ignore-start */}
 ```tsx twoslash
 import React from "react";
 import { Address } from "@scaffold-ui/components";
@@ -67,7 +79,6 @@ import { Address } from "@scaffold-ui/components";
   size="xs"
 />;
 ```
-{/* prettier-ignore-end */}
 
 ### Long Format
 
