Small tweak in Balance description

--- a/docs/pages/components/Balance.mdx
+++ b/docs/pages/components/Balance.mdx
@@ -7,7 +7,7 @@ import { DocsProvider } from "../../components/DocsProvider";
 
 # Balance Component
 
-The `Balance` component displays token balances for Ethereum addresses with support for USD conversion and interactive toggling.
+The `Balance` component displays the native token balance (e.g., ETH, MATIC) for Ethereum addresses with support for USD conversion and interactive toggling.
 
 ## Import
 
